--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "electron-packager": "^12.2.0"
   },
   "dependencies": {
-    "menubar": "^5.2.3",
-    "paper": "^0.11.5"
+    "menubar": "^5.2.3"
   }
 }
